# boo-skeleton

./: .env.development  .env.example  .env.mongodb  .env.production.example  .env.staging  .gitignore  CHANGELOG.md  CLI_README.md  CONTRIBUTING.md  DEVOPS_TASK_1_SUMMARY.md  INSTALLATION.md  LICENSE  MANIFEST.in  MONGODB_SETUP.md  PROJECT_STRUCTURE.md  PUBLISHING.md  README.md  TASK_10_SUMMARY.md  TASK_11_SUMMARY.md  TASK_12_RELEASE_WORKFLOW_SUMMARY.md  TASK_12_SUMMARY.md  TASK_19_IMPLEMENTATION_SUMMARY.md  TASK_22_SUMMARY.md  TEST_FIXES_SUMMARY.md  add_independent_dags.py  blog-post.md  codecov.yml  main.py  migration_data.json  mypy.ini  populate_courses.py  populate_port_8001.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run.sh  run_mongodb.sh  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  lint.yml  release.yml
.kiro/hooks/: git-commit-no-verify.kiro.hook
.kiro/steering/: api-design.md  architecture-patterns.md  coding-standards.md  database-guide.md  development-workflow.md  project-overview.md  testing-guide.md
app/: database.py  database_factory.py  database_mongodb.py  database_sqlalchemy.py  error_handlers.py  exceptions.py  schemas.py
app/models/: __init__.py  resource.py
app/repositories/: __init__.py  base_resource_repository.py  mongodb_resource_repository.py  resource_repository.py  sqlalchemy_resource_repository.py
app/routers/: resources.py
app/services/: __init__.py  resource_service.py  topological_sort_service.py
boo-kitchen/: .env.example  CHANGELOG.md  README.md  main.py  pyproject.toml  run.sh
boo-kitchen/app/: __init__.py  database_factory.py
boo-kitchen/config/: settings.py
boo-kitchen/scripts/: populate_example.py
boo-kitchen/static/: index.html
boo-package-manager/: .env.example  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt  run.sh
boo-package-manager/app/: database_factory.py  error_handlers.py
boo-package-manager/boo-cli/: .gitignore  README.md  pyproject.toml  pytest.ini
boo-package-manager/boo-cli/boo/: __init__.py  config.py  exceptions.py  main.py
boo-package-manager/boo-cli/boo/api/: __init__.py  client.py
boo-package-manager/boo-cli/boo/commands/: __init__.py
boo-package-manager/boo-cli/boo/package_manager/: __init__.py
boo-package-manager/boo-cli/boo/ui/: __init__.py
boo-package-manager/boo-cli/tests/: __init__.py  test_backend_client.py  test_backend_client_properties.py  test_error_handling.py  test_main.py
boo-package-manager/config/: settings.py
boo-package-manager/static/: index.html
boo-package-manager/tests/: conftest.py  test_api_endpoints.py
boo_skeleton/: __init__.py  __version__.py
boo_skeleton/cli/: database_configs.py  generator.py  main.py  prompts.py  template_engine.py
boo_skeleton/templates/: README.md
config/: settings.py
docs/: Makefile  QUICK_REFERENCE.md  README.md  RELEASE_PROCESS.md  SETUP_GUIDE.md  requirements.txt
docs/source/: architecture.rst  conf.py  index.rst  testing.rst
fastapi_crud_cli/: __init__.py  __version__.py
fastapi_crud_cli/cli/: __init__.py  database_configs.py  database_configs.yaml  generator.py  main.py  output.py  prompts.py  template_engine.py  validators.py
fastapi_crud_cli/source/: .coveragerc
fastapi_crud_cli/templates/: template_manifest.yaml
fastapi_crud_cli/utils/: __init__.py
observability/: grafana-dashboard.json  otel-collector-config.yaml  prometheus.yml  start_local_observability.sh  test_metrics_endpoint.py
scripts/: .pre-commit-config.yaml  README_MIGRATION.md  add_independent_dags.py  init_db.py  migrate_sqlite_to_mongodb.py  populate_courses.py  prepare_templates.py  sync_source.sh
src/: main.py
src/app/: database_factory.py  database_mongodb.py  database_sqlalchemy.py  error_handlers.py  exceptions.py  schemas.py
src/config/: settings.py
src/static/: app.js
src/tests/: strategies.py  test_api_endpoints.py  test_database_factory.py  test_database_models.py  test_observability_init.py  test_observability_metrics.py  test_property_backend_abstraction_sqlalchemy.py  test_property_backend_abstraction_transparency.py  test_property_cascade_delete.py  test_property_create_form_submission.py  test_property_crud_roundtrip.py  test_property_crud_roundtrip_consistency.py  test_property_delete_functionality.py  test_property_error_display.py  test_property_error_response_consistency.py  test_property_invalid_data_rejection.py  test_property_mongodb_connection_lifecycle.py  test_property_non_cascade_delete.py  test_property_relationship_preservation.py  test_property_resource_display.py  test_property_schema_field_completeness.py  test_property_search_display.py  test_property_update_functionality.py  test_property_update_persistence.py  test_property_validation_error_handling.py  test_resource_repository.py  test_schemas.py  (+2 more)
static/: app.js  index.html  styles.css
tests/: README_TESTING.md  __init__.py  conftest.py  strategies.py  test_api_endpoints.py  test_cli_basic.py  test_database_factory.py  test_database_models.py  test_property_backend_abstraction_sqlalchemy.py  test_property_backend_abstraction_transparency.py  test_property_cascade_delete.py  test_property_connection_error_handling.py  test_property_create_form_submission.py  test_property_crud_roundtrip.py  test_property_crud_roundtrip_consistency.py  test_property_delete_completeness.py  test_property_delete_functionality.py  test_property_error_display.py  test_property_error_response_consistency.py  test_property_http_status_codes.py  test_property_invalid_data_rejection.py  test_property_mongodb_connection_lifecycle.py  test_property_non_cascade_delete.py  test_property_relationship_preservation.py  test_property_resource_display.py  test_property_schema_field_completeness.py  test_property_search_display.py  test_property_update_functionality.py  test_property_update_persistence.py  test_property_validation_error_handling.py  test_resource_repository.py  test_resource_service.py  test_schemas.py  test_topological_sort_service.py
(+88 files in other folders)
