[project]
name = "fastapi-crud-backend"
version = "1.0.0"
description = "FastAPI CRUD Backend with Topological Sorting and Dual Database Support"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
  | \.pytest_cache
  | \.hypothesis
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B904",  # Exception chaining - to be addressed in future refactoring
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["B008", "E402"]  # Allow function calls in argument defaults and late imports in tests
"app/routers/*" = ["B008"]  # Allow FastAPI Depends pattern in routers
"scripts/*" = ["E402"]  # Allow imports after sys.path manipulation in scripts

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
